Add dragdrop/open/save support

--- a/ImageToMidi/ImageToMidi.csproj
+++ b/ImageToMidi/ImageToMidi.csproj
@@ -36,6 +36,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>ImageToMidi.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="alsa-sharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\managed-midi.1.3.3\lib\net45\alsa-sharp.dll</HintPath>
@@ -107,6 +110,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="ImageToMidi.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\RtMidi.Core.1.0.49\build\RtMidi.Core.targets" Condition="Exists('..\packages\RtMidi.Core.1.0.49\build\RtMidi.Core.targets')" />
